# json-mcp-server

./: .gitignore  Cargo.toml  DEPLOYMENT_STATUS.md  LICENSE-MIT  LOCAL_TESTING.md  PACKAGE_SUBMISSION_CHECKLIST.md  PACKAGE_TESTING_GUIDE.md  README.md  WORKFLOW_FIXES.md  build-all-local.ps1  test-all-local.ps1  test-all-local.sh  test-build-system.ps1  test-chocolatey-local.ps1  test-ci-local.ps1  test-github-actions-local.ps1  test-quick.ps1
.github/: copilot-instructions.md
.github/workflows/: packages.yml  release.yml  test-package-managers.yml  test-prebuilt.yml  test-release-packages.yml
dev_tools/: README.md  test-status.json
dev_tools/testing/: examples_simple_test.py  manual_test.py  simple_test.py  test_all_fixes.py  test_all_tools.py  test_json_errors.py  test_json_help.py  test_multiple_instances.py  test_partial_recovery.py  verify_responses.py
examples/: README.md  sample-data.json  sample_data.json  test-commands.jsonl  test-output.json
examples/mcp_clients/: claude-desktop.md  client_implementation.md  generic.md  github-copilot.md  python_client.py  vscode.md
packaging/aur/: PKGBUILD  PKGBUILD-bin
packaging/chocolatey/: json-mcp-server.nuspec
packaging/homebrew/: json-mcp-server.rb
packaging/snap/: snapcraft.yaml
packaging/winget/: ciresnave.json-mcp-server.installer.yaml  ciresnave.json-mcp-server.locale.en-US.yaml  ciresnave.json-mcp-server.yaml
scripts/: install.bat  install.ps1  install.sh
src/: lib.rs  main.rs
test-choco-package/: json-mcp-server.0.1.16.nupkg  json-mcp-server.nuspec
tests/: integration_tests.rs
(+12 files in other folders)
