[package]
name = "json-mcp-server"
version = "0.1.0"
edition = "2021"
description = "A high-performance Model Context Protocol (MCP) server for comprehensive JSON file operations optimized for LLM interactions"
authors = ["Eric Evans <CireSnave@gmail.com>"]
repository = "https://github.com/CireSnave/json-mcp-server"
homepage = "https://github.com/CireSnave/json-mcp-server"
documentation = "https://docs.rs/json-mcp-server"
license = "MIT OR Apache-2.0"
keywords = ["json", "mcp", "model-context-protocol", "llm", "jsonpath"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
readme = "README.md"
rust-version = "1.70"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
jsonpath-rust = "0.5"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
